# mdp-dedupe

./: .env  .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt
cleaned_data_parquet/: clinic_cleaned.parquet  hospital_cleaned.parquet  physical_therapy_cleaned.parquet  urgent_care_cleaned.parquet
config/: config.yaml  config_loader.py
data/models/: dedupe_model_settings
data/results/: dedupe_results.csv
models/: clinic.py  hospital.py  physical_therapy.py  urgent_care.py
scripts/: common.py  data_extraction.py  data_preprocessing.py  dedup_match.py  save_to_parquet.py  seed_db.py
src/mdp_dedupe/: __main__.py
src/mdp_dedupe/config/: __init__.py  default.yaml
src/mdp_dedupe/core/: dedup_match.py  types.py
src/mdp_dedupe/models/: __init__.py  base.py  clinic.py  hospital.py  physical_therapy.py  urgent_care.py
src/mdp_dedupe/scripts/: __init__.py  common.py  data_extraction.py  data_preprocessing.py  run_dedupe.py  seed_db.py  train_dedupe.py
